--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-h1, p {
+/*h1, p {
   font-family: Lato;
 }
-
+*/
 /* <!-- Thanks to https://codepen.io/enxaneta/ (original source ) --> */
 
 /*flex-direction: row | row-reverse | column | column-reverse;*/
